--- a/public/login.html
+++ b/public/login.html
@@ -5,39 +5,47 @@
   <title>Passport Authentication</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
+
+
+  <nav class="nav-wrapper">
+    <div class="brand-logo center">
     </div>
   </nav>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Login Form</h2>
-        <form class="login">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
+      <form class="col s6">
+        <div class="row">
+          <h2>Login Form</h2>
+          <div class="input-field col s12">
+            <input type="email" class="validate" id="email-input">
+            <label for="email">Email address</label>
           </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
-          <button type="submit" class="btn btn-default">Login</button>
+          <div class="row">
+            <div class="input-field col s12">
+              <label for="password">Password</label>
+              <input type="password" class="validate" id="password-input">
+            </div>
+          </div>
+          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+            <!-- <i class="material-icons right">send</i> -->
+          </button>
+          <br />
+          <p>Or sign up <a href="/">here</a></p>
         </form>
-        <br />
-        <p>Or sign up <a href="/">here</a></p>
-      </div>
     </div>
   </div>
 
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
 
 </body>
