formatted sign up

--- a/public/login.html
+++ b/public/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Login</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css"> -->
@@ -21,7 +21,7 @@
     <div class="row">
       <form class="col s6">
         <div class="row">
-          <h2>Login Form</h2>
+          <h3>Login Form</h3>
           <div class="input-field col s12">
             <input type="email" class="validate" id="email-input">
             <label for="email">Email address</label>
@@ -36,8 +36,7 @@
           <button class="btn waves-effect waves-light" type="submit" name="action">Submit
             <!-- <i class="material-icons right">send</i> -->
           </button>
-          <br />
-          <p>Or sign up <a href="/">here</a></p>
+          Or sign up <a href="/">here</a>
         </form>
     </div>
   </div>
