--- a/public/login.html
+++ b/public/login.html
@@ -36,7 +36,7 @@
           <button class="btn waves-effect waves-light" type="submit" name="action">Submit
             <!-- <i class="material-icons right">send</i> -->
           </button>
-          Or sign up <a href="/">here</a>
+          Or sign up <a href="./signup.html">here</a>
         </form>
     </div>
   </div>
