--- a/public/signup.html
+++ b/public/signup.html
@@ -21,7 +21,7 @@
       <form class="col s6">
         <div class="row">
           <h3>Sign Up</h3>
-          <p>Already a member? Login <a href="/">here</a></p>
+          <p>Already a member? Login <a href="./login.html">here</a></p>
           <div class="input-field col s6">
             <input id="first_name" type="text" class="validate">
             <label for="first_name">First Name</label>
