--- a/public/signup.html
+++ b/public/signup.html
@@ -55,7 +55,7 @@
             <label for="password">Password</label>
           </div>
         </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+        <button class="btn waves-effect waves-light" type="submit" name="action" id="signup">Submit
           <!-- <i class="material-icons right">send</i> -->
         </button>
       </form>
