--- a/public/members.html
+++ b/public/members.html
@@ -11,6 +11,23 @@
 </head>
 
 <body>
+
+
+  <nav class="nav-wrapper">
+    <div class="brand-logo center">
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <form class="col s6">
+        <div class="row">
+          <h3>Members</h3>
+        </div>
+
+        </form>
+    </div>
+  </div>
+
   <!-- <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
