--- a/public/members.html
+++ b/public/members.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="stylesheets/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -19,35 +20,84 @@
   </nav>
   <div class="container">
     <div class="row">
-      <form class="col s6">
-        <div class="row">
-          <h3>Members</h3>
+      <!-- Page header -->
+      <div class="row">
+        <h3>Members</h3>
+      </div>
+      <!-- Card grid -->
+      <div class="row">
+        <div class="col s12 m6">
+          
+          <div class="card">
+            <div class="card-image">
+              <img src="placeholder.jpg">
+              <a class="btn-floating halfway-fab waves-effect waves-light modal-trigger" href="#m1"><i class="material-icons">style</i></a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Maya Angelou<span class="class-year">&nbsp;&nbsp;Spring 2020</span></span>
+              <p>
+                Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.              </p>
+            </div>
+            <!-- <div class="card-action">
+              <span>Github: <a href="https://github.com/apatel922" target="_blank">apatel922</a></span>
+            </div> -->
+          </div>
         </div>
 
-        </form>
+      </div>
+
+      <!-- Modal Template: m1 -->
+      <div id="m1" class="modal">
+        <div class="modal-content">
+          <div class="row">
+            <div class="col s12">
+              <h5>Maya Angelou</h5>
+              <p>
+                Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.
+              </p>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">CLOSE</a>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- <div id="m1" class="modal">
+        <div class="modal-content">
+          <div class="row">
+            <div class="col s12">
+              <div>
+                <img class="modal-image" src="placeholder.jpg">
+              </div>            
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <h5>Maya Angelou</h5>
+              <p>
+                Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div> -->
+
     </div>
   </div>
 
-  <!-- <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
-    </div>
-  </div>
-</nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome <span class="member-name"></span></h2>
-      </div>
-    </div>
-  </div> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
+  
+  <!-- Modal logic -->
+  <script>
+    $(document).ready(function(){
+      $('.modal').modal();
+    });
+  </script>
 
 </body>
 
