Changed page titles

--- a/public/login.html
+++ b/public/login.html
@@ -21,7 +21,7 @@
     <div class="row">
       <form class="col s6">
         <div class="row">
-          <h3>Login Form</h3>
+          <h3>Login</h3>
           <div class="input-field col s12">
             <input type="email" class="validate" id="email-input">
             <label for="email">Email address</label>
