--- a/public/members.html
+++ b/public/members.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Our Team</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -22,7 +22,7 @@
     <div class="row">
       <!-- Page header -->
       <div class="row">
-        <h3>Members</h3>
+        <h3>Our Team</h3>
       </div>
       <!-- Card grid -->
       <div class="row">
