--- a/public/members.html
+++ b/public/members.html
@@ -13,11 +13,17 @@
 
 <body>
 
-
-  <nav class="nav-wrapper">
-    <div class="brand-logo center">
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Logo</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">JavaScript</a></li>
+      </ul>
     </div>
   </nav>
+
   <div class="container">
     <div class="row">
       <!-- Page header -->
