Final (?) navbar to all html

--- a/public/members.html
+++ b/public/members.html
@@ -21,6 +21,7 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="members.html">Members</a></li>
         <li><a href="signup.html">Sign Up</a></li>
+        <li><a href="login.html">Log Out</a></li>
       </ul>
     </div>
   </nav>
@@ -28,6 +29,7 @@
   <ul class="sidenav" id="mobile-demo">
     <li><a href="members.html">Members</a></li>
     <li><a href="signup.html">Sign Up</a></li>
+    <li><a href="login.html">Log Out</a></li>
   </ul>
 
   <div class="container">
