Added ID containers for cards & modals

--- a/public/members.html
+++ b/public/members.html
@@ -39,44 +39,59 @@
         <h3>Our Team</h3>
       </div>
       <!-- Card grid -->
+
+
+
       <div class="row">
-        <div class="col s12 m6">
-          
-          <div class="card">
-            <div class="card-image">
-              <img src="placeholder.jpg">
-              <a class="btn-floating halfway-fab waves-effect waves-light modal-trigger" href="#m1"><i class="material-icons">style</i></a>
+        <!-- All Cards go here! -->
+        <div id="teamCards" class="">
+
+          <!-- Template Card -->
+          <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="placeholder.jpg">
+                <a class="btn-floating halfway-fab waves-effect waves-light modal-trigger" href="#m1"><i class="material-icons">style</i></a>
+              </div>
+              <div class="card-content">
+                <span class="card-title">Maya Angelou<span class="class-year">&nbsp;&nbsp;Spring 2020</span></span>
+                <p>
+                  Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.              </p>
+              </div>
+              <!-- <div class="card-action">
+                <span>Github: <a href="https://github.com/apatel922" target="_blank">apatel922</a></span>
+              </div> -->
             </div>
-            <div class="card-content">
-              <span class="card-title">Maya Angelou<span class="class-year">&nbsp;&nbsp;Spring 2020</span></span>
-              <p>
-                Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.              </p>
+
+          </div>
+
+        </div>
+      </div>
+
+
+      <!-- All modals go here! -->
+      <div id="modalContainer">
+
+        <!-- Modal Template: m1 -->
+        <div id="m1" class="modal">
+          <div class="modal-content">
+            <div class="row">
+              <div class="col s12">
+                <h5>Maya Angelou</h5>
+                <p>
+                  Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.
+                </p>
+              </div>
             </div>
-            <!-- <div class="card-action">
-              <span>Github: <a href="https://github.com/apatel922" target="_blank">apatel922</a></span>
-            </div> -->
+            <div class="modal-footer">
+              <a href="#!" class="modal-close waves-effect waves-green btn-flat">CLOSE</a>
+            </div>
           </div>
         </div>
 
       </div>
 
-      <!-- Modal Template: m1 -->
-      <div id="m1" class="modal">
-        <div class="modal-content">
-          <div class="row">
-            <div class="col s12">
-              <h5>Maya Angelou</h5>
-              <p>
-                Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.
-              </p>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">CLOSE</a>
-          </div>
-        </div>
 
-      </div>
 
       <!-- <div id="m1" class="modal">
         <div class="modal-content">
