--- a/public/members.html
+++ b/public/members.html
@@ -38,38 +38,35 @@
       <div class="row">
         <h3>Our Team</h3>
       </div>
-      <!-- Card grid -->
-
 
 
       <div class="row">
-        <!-- All Cards go here! -->
+        <!-- ALL CARDS HERE! -->
         <div id="teamCards" class="">
 
           <!-- Template Card -->
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="placeholder.jpg">
-                <a class="btn-floating halfway-fab waves-effect waves-light modal-trigger" href="#m1"><i class="material-icons">style</i></a>
+          <div id="div1" class="col s12 m6">
+            <div id="div2" class="card">
+              <div id="imgdiv" class="card-image">
+                <img id="img1" src="placeholder.jpg">
+                <a id="fab" class="btn-floating halfway-fab waves-effect waves-light modal-trigger" href="#m1"><i class="material-icons">style</i></a>
               </div>
-              <div class="card-content">
-                <span class="card-title">Maya Angelou<span class="class-year">&nbsp;&nbsp;Spring 2020</span></span>
-                <p>
+              <div id="div3" class="card-content">
+                <span id="text1" class="card-title">Maya Angelou<span class="class-year">&nbsp;&nbsp;Spring 2020</span></span>
+                <p id="text2">
                   Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.              </p>
               </div>
               <!-- <div class="card-action">
                 <span>Github: <a href="https://github.com/apatel922" target="_blank">apatel922</a></span>
               </div> -->
             </div>
-
           </div>
 
         </div>
       </div>
 
 
-      <!-- All modals go here! -->
+      <!-- ALL MODALS HERE! -->
       <div id="modalContainer">
 
         <!-- Modal Template: m1 -->
@@ -93,25 +90,6 @@
 
 
 
-      <!-- <div id="m1" class="modal">
-        <div class="modal-content">
-          <div class="row">
-            <div class="col s12">
-              <div>
-                <img class="modal-image" src="placeholder.jpg">
-              </div>            
-            </div>
-          </div>
-          <div class="row">
-            <div class="col s12">
-              <h5>Maya Angelou</h5>
-              <p>
-                Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div> -->
 
     </div>
   </div>
