Added IDs to modal divs

--- a/public/members.html
+++ b/public/members.html
@@ -71,16 +71,16 @@
 
         <!-- Modal Template: m1 -->
         <div id="m1" class="modal">
-          <div class="modal-content">
-            <div class="row">
-              <div class="col s12">
-                <h5>Maya Angelou</h5>
-                <p>
+          <div id="mcontent" class="modal-content">
+            <div id="mrow" class="row">
+              <div id="mcol" class="col s12">
+                <h5 id="mtext1">Maya Angelou</h5>
+                <p id="mtext2">
                   Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.
                 </p>
               </div>
             </div>
-            <div class="modal-footer">
+            <div id="mfoot" class="modal-footer">
               <a href="#!" class="modal-close waves-effect waves-green btn-flat">CLOSE</a>
             </div>
           </div>
