mysql and jquery to cretae test card

--- a/public/members.html
+++ b/public/members.html
@@ -45,7 +45,8 @@
         <div id="teamCards" class="">
 
           <!-- Template Card -->
-          <div id="div1" class="col s12 m6">
+
+          <!-- <div id="div1" class="col s12 m6">
             <div id="div2" class="card">
               <div id="imgdiv" class="card-image">
                 <img id="img1" src="placeholder.jpg">
@@ -55,12 +56,12 @@
                 <span id="text1" class="card-title">Maya Angelou<span class="class-year">&nbsp;&nbsp;Spring 2020</span></span>
                 <p id="text2">
                   Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.              </p>
-              </div>
+              </div> -->
               <!-- <div class="card-action">
                 <span>Github: <a href="https://github.com/apatel922" target="_blank">apatel922</a></span>
               </div> -->
-            </div>
-          </div>
+            <!-- </div>
+          </div> -->
 
         </div>
       </div>
