--- a/public/members.html
+++ b/public/members.html
@@ -45,23 +45,26 @@
         <div id="teamCards" class="">
 
           <!-- Template Card -->
-
-          <!-- <div id="div1" class="col s12 m6">
+          <div id="div1" class="col s12 m6">
             <div id="div2" class="card">
-              <div id="imgdiv" class="card-image">
+              <!-- <div id="imgdiv" class="card-image">
+
                 <img id="img1" src="placeholder.jpg">
-                <a id="fab" class="btn-floating halfway-fab waves-effect waves-light modal-trigger" href="#m1"><i class="material-icons">style</i></a>
+                <a id="fab" class="btn-floating halfway-fab waves-effect waves-light modal-trigger" href="#m1"><i
+                    class="material-icons">style</i></a>
               </div>
               <div id="div3" class="card-content">
-                <span id="text1" class="card-title">Maya Angelou<span class="class-year">&nbsp;&nbsp;Spring 2020</span></span>
+                <span id="text1" class="card-title">Maya Angelou<span class="class-year">&nbsp;&nbsp;Spring
+                    2020</span></span>
                 <p id="text2">
-                  Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.              </p>
+                  Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa
+                  mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle. </p>
               </div> -->
               <!-- <div class="card-action">
                 <span>Github: <a href="https://github.com/apatel922" target="_blank">apatel922</a></span>
               </div> -->
-            <!-- </div>
-          </div> -->
+            </div>
+          </div>
 
         </div>
       </div>
@@ -77,7 +80,8 @@
               <div id="mcol" class="col s12">
                 <h5 id="mtext1">Maya Angelou</h5>
                 <p id="mtext2">
-                  Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.
+                  Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa
+                  mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.
                 </p>
               </div>
             </div>
@@ -99,15 +103,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
-  
+
   <script>
     // Modal Logic
-    $(document).ready(function(){
+    $(document).ready(function () {
       $('.modal').modal();
     });
 
     // Sidenav
-    $(document).ready(function(){
+    $(document).ready(function () {
       $('.sidenav').sidenav();
     });
   </script>
