Base jumbotron for home.html

--- a/public/home.html
+++ b/public/home.html
@@ -42,6 +42,9 @@
                 <h3 class="jumboHeader">Welcome!</h3>
             </div>
             <div class="divider"></div>
+            <p class="jumboContent">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est. Etiam augue nibh, mollis eget egestas at, placerat sit amet libero.
+            </p>
         </div>
       </div>
 
