Working on home.html

--- a/public/home.html
+++ b/public/home.html
@@ -27,6 +27,7 @@
   </nav>
   <!-- Sidenav -->
   <ul class="sidenav" id="mobile-demo">
+    <li><a href="home.html">Home</a></li>
     <li><a href="members.html">Members</a></li>
     <li><a href="signup.html">Sign Up</a></li>
     <li><a href="login.html">Log Out</a></li>
@@ -45,6 +46,7 @@
             <p class="jumboContent">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est. Etiam augue nibh, mollis eget egestas at, placerat sit amet libero.
             </p>
+            <a href="members.html" class="waves-effect waves-light btn-large">Our Team</a>
         </div>
       </div>
 
