--- a/public/signup.html
+++ b/public/signup.html
@@ -27,6 +27,7 @@
   </nav>
   <!-- Sidenav -->
   <ul class="sidenav" id="mobile-demo">
+    <li><a href="home.html">Home</a></li>
     <li><a href="members.html">Members</a></li>
     <li><a href="signup.html">Sign Up</a></li>
     <li><a href="login.html">Log Out</a></li>
