fixed cards to start working

--- a/public/members.html
+++ b/public/members.html
@@ -47,7 +47,7 @@
           <!-- Template Card -->
           <div id="div1" class="col s12 m6">
             <div id="div2" class="card">
-              <!-- <div id="imgdiv" class="card-image">
+              <div id="imgdiv" class="card-image">
 
                 <img id="img1" src="placeholder.jpg">
                 <a id="fab" class="btn-floating halfway-fab waves-effect waves-light modal-trigger" href="#m1"><i
@@ -59,7 +59,7 @@
                 <p id="text2">
                   Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa
                   mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle. </p>
-              </div> -->
+              </div>
               <!-- <div class="card-action">
                 <span>Github: <a href="https://github.com/apatel922" target="_blank">apatel922</a></span>
               </div> -->
