--- a/public/home.html
+++ b/public/home.html
@@ -17,7 +17,7 @@
   <nav>
     <div class="nav-wrapper">
       <a href="home.html" class="brand-logo">nerd book</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">more_vert</i></a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">reorder</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="members.html">Members</a></li>
         <li><a href="signup.html">Sign Up</a></li>
@@ -43,10 +43,12 @@
                 <h3 class="jumboHeader">Welcome!</h3>
             </div>
             <div class="divider"></div>
-            <p class="jumboContent">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est. Etiam augue nibh, mollis eget egestas at, placerat sit amet libero.
-            </p>
-            <a href="members.html" class="waves-effect waves-light btn-large">Our Team</a>
+            <div class="jumboContent">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
+                </p>
+                <a href="members.html" class="waves-effect waves-light btn-large">Our Team</a>
+            </div>
         </div>
       </div>
 
