--- a/public/signup.html
+++ b/public/signup.html
@@ -17,7 +17,7 @@
   <nav>
     <div class="nav-wrapper">
       <a href="home.html" class="brand-logo">nerd book</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">more_vert</i></a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">reorder</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="members.html">Members</a></li>
         <li><a href="signup.html">Sign Up</a></li>
