--- a/public/login.html
+++ b/public/login.html
@@ -13,6 +13,24 @@
 
 <body>
 
+  <!-- Navbar -->
+  <nav>
+    <div class="nav-wrapper">
+      <a href="" class="brand-logo">nerd book</a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">reorder</i></a>
+      <ul class="right hide-on-med-and-down">
+        <!-- <li><a href="members.html">Members</a></li>
+        <li><a href="login.html">Log Out</a></li> -->
+      </ul>
+    </div>
+  </nav>
+  <!-- Sidenav -->
+  <!-- <ul class="sidenav" id="mobile-demo">
+    <li><a href="home.html">Home</a></li>
+    <li><a href="members.html">Members</a></li>
+    <li><a href="login.html">Log Out</a></li>
+  </ul> -->
+
   <div class="container">
     <div class="row">
       <form class="col s6">
