--- a/public/members.html
+++ b/public/members.html
@@ -57,11 +57,8 @@
               <div id="div3" class="card-content">
                 <span id="text1" class="card-title">Maya Angelou<span class="class-year">&nbsp;&nbsp;Spring
                     2020</span></span>
-                <p id="text2">
-                  Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa
-                  mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle. </p>
               </div>
-              <!-- <div class="card-action">
+              <div class="card-action">
                 <span>Github: <a href="https://github.com/apatel922" target="_blank">apatel922</a></span>
               </div>
             </div>
