Cleaned up jumbos

--- a/public/home.html
+++ b/public/home.html
@@ -42,16 +42,13 @@
             </div>
             <div class="divider"></div>
             <div class="jumboContent">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
+                <p class="jumboText">
+                    We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
                 </p>
-                <a href="members.html" class="waves-effect waves-light btn-large">Our Team</a>
+                <a href="members.html" class="waves-effect waves-light btn-large">Meet The Team!</a>
             </div>
         </div>
       </div>
-
-
-
 
     </div>
   </div>
