--- a/public/members.html
+++ b/public/members.html
@@ -75,15 +75,16 @@
             <div id="mrow" class="row">
               <div id="mcol" class="col s12">
                 <h5 id="mtext1">Maya Angelou</h5>
-                <p id="mtext2">
-                  Lorizzle ipsizzle dolizzle shit amizzle, black adipiscing elit. Nullam sapien velit, mammasay mammasa
-                  mamma oo sa shizznit, fo check it out, gravida vizzle, pizzle. Pellentesque own yo' tortizzle.
+                <p id="mgithub">
+                  @apatel922                
                 </p>
               </div>
             </div>
-            <div id="mfoot" class="modal-footer">
+            <div class="divider"></div>
+
+            <!-- <div id="mfoot" class="modal-footer">
               <a href="#!" class="modal-close waves-effect waves-green btn-flat">CLOSE</a>
-            </div>
+            </div> -->
           </div>
         </div>
 
