--- a/public/members.html
+++ b/public/members.html
@@ -73,18 +73,24 @@
         <div id="m1" class="modal">
           <div id="mcontent" class="modal-content">
             <div id="mrow" class="row">
-              <div id="mcol" class="col s12">
-                <h5 id="mtext1">Maya Angelou</h5>
-                <p id="mgithub">
-                  @apatel922                
-                </p>
+              <div id="mcol" class="col s11">
+                <h5 id="mheader">Maya Angelou</h5>
+                <p id="mgithub">@githubusername</p>
+              </div>
+              <div id="mcol" class="col s1">
+                <i id="xIcon" class="material-icons modal-close">close</i>
               </div>
             </div>
-            <div class="divider"></div>
+            <div id="mdivider" class="divider"></div>
 
-            <!-- <div id="mfoot" class="modal-footer">
-              <a href="#!" class="modal-close waves-effect waves-green btn-flat">CLOSE</a>
-            </div> -->
+            <div id="mrow2" class="row">
+              <div id="mcol2" class="col s12">
+                <p id="mheader2" class="topRepo">Top Repositories</p>
+                <p id="repo1">Repo 1</p>
+                <p id="repo2">Repo 2</p>
+                <p id="repo3">Repo 3</p>
+              </div>
+            </div>
           </div>
         </div>
 
