--- a/public/home.html
+++ b/public/home.html
@@ -20,7 +20,7 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">reorder</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="members.html">Members</a></li>
-        <li><a href="login.html">Log Out</a></li>
+        <li><a href="signup.html">Sign Up</a></li>
       </ul>
     </div>
   </nav>
@@ -28,7 +28,7 @@
   <ul class="sidenav" id="mobile-demo">
     <li><a href="home.html">Home</a></li>
     <li><a href="members.html">Members</a></li>
-    <li><a href="login.html">Log Out</a></li>
+    <li><a href="signup.html">Sign Up</a></li>
   </ul>
 
   <div class="container">
