--- a/public/signup.html
+++ b/public/signup.html
@@ -16,7 +16,7 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-wrapper">
-      <a href="" class="brand-logo">nerd book</a>
+      <a href="home.html" class="brand-logo">nerd book</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"></i></a>
       <ul class="right hide-on-med-and-down">
         <!-- <li><a href="signup.html">Sign Up</a></li> -->
@@ -25,7 +25,7 @@
   </nav>
 
 
-  
+
   <div class="container">
     <div class="row">
       <form class="col s6">
