Added placeholder for guest on home.html

--- a/public/home.html
+++ b/public/home.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div id="jumbotron" class="col s12 m12">
             <div class="row">
-                <h3 class="jumboHeader">Welcome!</h3>
+                <h3 class="jumboHeader">Welcome, <span id="guest">Jumanji</span></h3>
             </div>
             <div class="divider"></div>
             <div class="jumboContent">
