--- a/public/members.html
+++ b/public/members.html
@@ -53,8 +53,7 @@
                     class="material-icons">style</i></a>
               </div>
               <div id="div3" class="card-content">
-                <span id="text1" class="card-title">Maya Angelou<span class="class-year">&nbsp;&nbsp;Spring
-                    2020</span></span>
+                <span id="text1" class="card-title">Maya Angelou<span class="class-year">2020</span></span>
               </div>
               <div class="card-action">
                 <span>Github: <a href="https://github.com/apatel922" target="_blank">apatel922</a></span>
