--- a/public/members.html
+++ b/public/members.html
@@ -49,8 +49,8 @@
               <div id="imgdiv" class="card-image">
 
                 <img id="img1" src="placeholder.jpg">
-                <a id="fab" class="btn-floating halfway-fab waves-effect waves-light modal-trigger" href="#m1"><i
-                    class="material-icons">style</i></a>
+                <a id="fab" class="btn-floating halfway-fab waves-effect waves-light modal-trigger" href="#m1">
+                  <i class="material-icons">style</i></a>
               </div>
               <div id="div3" class="card-content">
                 <span id="text1" class="card-title">Maya Angelou<span class="class-year">2020</span></span>
