fixed members modal and info

--- a/public/members.html
+++ b/public/members.html
@@ -41,7 +41,7 @@
 
       <div class="row">
         <!-- ALL CARDS HERE! -->
-        <div id="teamCards" class="">
+        <div id="" class="teamCards">
 
           <!-- Template Card -->
           <div id="div1" class="col s12 m6">
@@ -74,7 +74,7 @@
           <div id="mcontent" class="modal-content">
             <div id="mrow" class="row">
               <div id="mcol" class="col s11">
-                <h5 id="mheader">Maya Angelou</h5>
+                <h5 id="mheader"></h5>
                 <p id="mgithub">@githubusername</p>
               </div>
               <div id="mcol" class="col s1">
