--- a/public/login.html
+++ b/public/login.html
@@ -36,6 +36,7 @@
       <form class="col s6">
         <div class="row">
           <h3>Login</h3>
+          <p>Already a member? Login <a href="./login.html">here</a></p>
           <div class="input-field col s12">
             <input type="email" class="validate" id="email-input">
             <label for="email">Email address</label>
