Updated modal entries

--- a/public/login.html
+++ b/public/login.html
@@ -36,7 +36,7 @@
       <form class="col s6">
         <div class="row">
           <h3>Login</h3>
-          <p>Already a member? Login <a href="./login.html">here</a></p>
+          <p>Don't have an account? Sign up <a href="./signup.html">here</a></p>
           <div class="input-field col s12">
             <input type="email" class="validate" id="email-input">
             <label for="email">Email address</label>
@@ -51,7 +51,6 @@
           <button class="btn waves-effect waves-light" type="submit" name="action" id="login">Submit
             <!-- <i class="material-icons right">send</i> -->
           </button>
-          Or sign up <a href="./signup.html">here</a>
         </form>
     </div>
   </div>
