--- a/public/members.html
+++ b/public/members.html
@@ -73,7 +73,7 @@
           <div id="mcontent" class="modal-content">
             <div id="mrow" class="row">
               <div id="mcol" class="col s11">
-                <h5 id="mheader"></h5>
+                <h5 id="mheader">yourNameHere</h5>
                 <p id="mgithub">@githubusername</p>
               </div>
               <div id="mcol" class="col s1">
@@ -83,10 +83,10 @@
             <div id="mdivider" class="divider"></div>
             <div id="mrow2" class="row">
               <div id="mcol2" class="col s12">
-                <p id="mheader2" class="topRepo">Top Repositories</p>
-                <p id="repo1">Repo 1</p>
-                <p id="repo2">Repo 2</p>
-                <p id="repo3">Repo 3</p>
+                <p id="mheader2" class="topRepo">About me</p>
+                <p id="email">Email@email.com</p>
+                <p id="location">Location for stalkers</p>
+                <p id="repoCount">How many repos?</p>
               </div>
             </div>
           </div>
