--- a/public/members.html
+++ b/public/members.html
@@ -19,14 +19,14 @@
       <a href="home.html" class="brand-logo">nerd book</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">reorder</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="">Log Out</a></li>
+        <li><a href="/logout">Log Out</a></li>
       </ul>
     </div>
   </nav>
   <!-- Sidenav -->
   <ul class="sidenav" id="mobile-demo">
     <li><a href="home.html">Home</a></li>
-    <li><a href="">Log Out</a></li>
+    <li><a href="/logout">Log Out</a></li>
   </ul>
 
   <div class="container">
