Had incorrect href

--- a/public/home.html
+++ b/public/home.html
@@ -27,7 +27,7 @@
   <!-- Sidenav -->
   <ul class="sidenav" id="mobile-demo">
     <li><a href="home.html">Home</a></li>
-    <li><a href="login.html.html">Log In</a></li>
+    <li><a href="login.html">Log In</a></li>
     <li><a href="signup.html">Sign Up</a></li>
   </ul>
 
