--- a/public/members.html
+++ b/public/members.html
@@ -85,8 +85,8 @@
               <div id="mcol2" class="col s12">
                 <p id="mheader2" class="topRepo">About me</p>
                 <p id="email">Email@email.com</p>
-                <p id="location">Location for stalkers</p>
-                <p id="repoCount">How many repos?</p>
+                <p id="location">Location for my stalkers</p>
+                <p id="repoCount">Repo count</p>
               </div>
             </div>
           </div>
