--- a/public/signup.html
+++ b/public/signup.html
@@ -65,9 +65,7 @@
             <label for="password">Password</label>
           </div>
         </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action" id="signup">Submit
-          <!-- <i class="material-icons right">send</i> -->
-        </button>
+        <button class="btn waves-effect waves-light" type="submit" name="action" id="signup">Submit</button>
       </form>
     </div>
   </div>
