--- a/public/login.html
+++ b/public/login.html
@@ -35,7 +35,7 @@
     <div class="row">
       <form class="col s6">
         <div class="row">
-          <h3>Login</h3>
+          <h3>Log In</h3>
           <p>Don't have an account? Sign up <a href="./signup.html">here</a></p>
           <div class="input-field col s12">
             <input type="email" class="validate" id="email-input">
