--- a/public/home.html
+++ b/public/home.html
@@ -19,7 +19,7 @@
       <a href="home.html" class="brand-logo">nerd book</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">reorder</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="login.html.html">Log In</a></li>
+        <li><a href="login.html">Log In</a></li>
         <li><a href="signup.html">Sign Up</a></li>
       </ul>
     </div>
