--- a/public/home.html
+++ b/public/home.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div id="jumbotron" class="col s12 m12">
             <div class="row">
-                <h3 class="jumboHeader">Welcome, <span id="guest">Gwethony</span></h3>
+                <h3 class="jumboHeader">Welcome<span id="guest"></span></h3>
             </div>
             <div class="divider"></div>
             <div class="jumboContent">
@@ -46,6 +46,25 @@
                     We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
                 </p>
                 <a href="members.html" class="waves-effect waves-light btn-large">Meet The Team!</a>
+            </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div id="jumbotron" class="col s12 m6">
+            <div class="jumboContent">
+                <p class="">
+                    We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
+                    We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
+                </p>
+            </div>
+        </div>
+        <div id="jumbotron" class="col s12 m6">
+            <div class="jumboContent">
+                <p class="">
+                    We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
+                    We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
+                </p>
             </div>
         </div>
       </div>
