--- a/public/login.html
+++ b/public/login.html
@@ -33,18 +33,18 @@
 
   <div class="container">
     <div class="row">
-      <form class="col s6">
+      <form class="col s6" action="/login" method="POST">
         <div class="row">
           <h3>Login</h3>
           <div class="input-field col s12">
-            <input type="email" class="validate" id="email-input">
+            <input type="email" name="email" class="validate" id="email-input">
             <label for="email">Email address</label>
           </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
               <label for="password">Password</label>
-              <input type="password" class="validate" id="password-input">
+              <input type="password" name="password" class="validate" id="password-input">
             </div>
           </div>
           <button class="btn waves-effect waves-light" type="submit" name="action" id="login">Submit
@@ -59,7 +59,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script type="text/javascript" src="js/login.js"></script>
+  <!-- <script type="text/javascript" src="js/login.js"></script> -->
 
 </body>
 
