Added final imgs & base home page GTFG

--- a/public/login.html
+++ b/public/login.html
@@ -16,7 +16,7 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-wrapper">
-      <a href="home.html" class="brand-logo">nerd book</a>
+      <a href="home.html" class="brand-logo">nerd_book</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">reorder</i></a>
       <ul class="right hide-on-med-and-down">
         <!-- <li><a href="members.html">Members</a></li>
