--- a/public/home.html
+++ b/public/home.html
@@ -34,25 +34,30 @@
 
       <!-- Parallax attempt -->
       <div class="parallax-container">
-        <div class="parallax"><img src="assets/team1.jpg"></div>
+        <div class="parallax"><img src="assets/team2C.png"></div>
       </div>
       <div class="section white">
         <div id="jumbotron" class="col s12 m12">
             <div class="row">
-                <h3 class="jumboHeader">where <span class="italics">greatness</span> happens</h3>
-                <!-- <h3 class="jumboHeader">Welcome<span id="guest"></span></h3> -->
+                <div class="container">
+                    <h3 class="jumboHeader">where <span class="italics">greatness</span> happens</h3>
+                    <!-- <h3 class="jumboHeader">Welcome<span id="guest"></span></h3> -->
+                </div>
+                <div class="divider"></div>
+                <div class="container">
+                    <div class="jumboContent">
+                        <p class="jumboText">
+                            We are a passionate crew here at <span class="italics brandColor">nerd_book</span>.  Our mission is bringing teams together with ingenuity, innovation and imagination.                
+                        </p>
+                        <a href="members.html" class="waves-effect waves-light btn-large">Meet The Team</a>
+                    </div>
+                </div>
             </div>
-            <div class="divider"></div>
-            <div class="jumboContent">
-                <p class="jumboText">
-                    We are a passionate crew here at <span class="italics brandColor">nerd_book</span>.  Our mission is bringing teams together with ingenuity, innovation and imagination.                
-                </p>
-                <a href="members.html" class="waves-effect waves-light btn-large">Meet The Team!</a>
-            </div>
+
         </div>
       </div>
       <div class="parallax-container">
-        <div class="parallax"><img src="assets/team2.jpg"></div>
+        <div class="parallax"><img src="assets/team1B.png"></div>
       </div>
 
       <div class="section white">
@@ -60,14 +65,14 @@
             <div id="" class="col s12 m6">
                 <div class="jumboContent">
                     <p class="">
-                        We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at elementum ligula, eget laoreet augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam facilisis sem suscipit tellus semper, sed auctor massa sodales. Maecenas et arcu quis lorem porttitor pellentesque. Aenean dictum consectetur augue, a egestas nunc blandit id. Integer vel dui suscipit, pellentesque urna at, aliquam diam. Maecenas lacinia augue id elementum porttitor. Pellentesque at enim non ipsum blandit condimentum. Curabitur dictum eros non posuere aliquet. Vivamus ultrices imperdiet pharetra. Aenean lorem nisl, scelerisque id viverra non, sagittis sed metus. Cras ac quam porta, mollis ante eu, tempor nunc. Nullam porttitor diam ac dapibus auctor. Sed ac lorem faucibus, tempus nisl sed, rhoncus dolor.
                     </p>
                 </div>
             </div>
             <div id="" class="col s12 m6">
                 <div class="jumboContent">
                     <p class="">
-                        We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at elementum ligula, eget laoreet augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam facilisis sem suscipit tellus semper, sed auctor massa sodales. Maecenas et arcu quis lorem porttitor pellentesque. Aenean dictum consectetur augue, a egestas nunc blandit id. Integer vel dui suscipit, pellentesque urna at, aliquam diam. Maecenas lacinia augue id elementum porttitor. Pellentesque at enim non ipsum blandit condimentum. Curabitur dictum eros non posuere aliquet. Vivamus ultrices imperdiet pharetra. Aenean lorem nisl, scelerisque id viverra non, sagittis sed metus. Cras ac quam porta, mollis ante eu, tempor nunc. Nullam porttitor diam ac dapibus auctor. Sed ac lorem faucibus, tempus nisl sed, rhoncus dolor.
                     </p>
                 </div>
             </div>        
