Tweaks to signup & login pg

--- a/public/home.html
+++ b/public/home.html
@@ -17,7 +17,9 @@
   <nav>
     <div class="nav-wrapper">
       <a href="home.html" class="brand-logo">nerd_book</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">reorder</i></a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+          <i class="large material-icons">voicemail</i>
+        </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="login.html">Log In</a></li>
         <li><a href="signup.html">Sign Up</a></li>
