--- a/public/members.html
+++ b/public/members.html
@@ -17,7 +17,9 @@
   <nav>
     <div class="nav-wrapper">
       <a href="home.html" class="brand-logo">nerd_book</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">reorder</i></a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+        <i class="large material-icons">voicemail</i>
+      </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/logout">Log Out</a></li>
       </ul>
