--- a/public/signup.html
+++ b/public/signup.html
@@ -17,7 +17,9 @@
   <nav>
     <div class="nav-wrapper">
       <a href="home.html" class="brand-logo">nerd_book</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"></i></a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+        <i class="large material-icons">voicemail</i>
+      </a>
       <ul class="right hide-on-med-and-down">
         <!-- <li><a href="signup.html">Sign Up</a></li> -->
       </ul>
@@ -28,7 +30,7 @@
 
   <div class="container">
     <div class="row">
-      <form class="col s6">
+      <form class="col s8">
         <div class="row">
           <h3>Sign Up</h3>
           <p>Already a member? Login <a href="./login.html">here</a></p>
@@ -67,7 +69,9 @@
         </div>
         <button class="btn-large waves-effect waves-light" type="submit" name="action" id="signup">Submit</button>
       </form>
-    </div>
+      <div class="col s4">
+        <!-- <img class="specs" src="assets/glassesIcon.png"> -->
+      </div>
   </div>
 
   <!-- <nav class="navbar navbar-default">
