commented out  placeholder card

--- a/public/members.html
+++ b/public/members.html
@@ -42,7 +42,7 @@
         <div id="" class="teamCards">
 
           <!-- Template Card -->
-          <div id="div1" class="col s12 m6">
+          <!-- <div id="div1" class="col s12 m6">
             <div id="div2" class="card">
               <div id="imgdiv" class="card-image">
 
@@ -57,7 +57,7 @@
                 <span>Github: <a href="https://github.com/apatel922" target="_blank">apatel922</a></span>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
